centered meal boxes, added styling, fixed overflow issue

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -25,7 +25,6 @@ just the mealcard below. If latter then that's a problem
   
 } */
 
-
 body {
   min-height: 100vh;
   max-height: 100vh;
@@ -247,22 +246,35 @@ nav {
 
 .meals-container {
   /* margin-top: 10px; */
-  border: solid black 1px;
-  max-width: 60vw;
-  max-height: 90vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  /* border: solid black 1px; */
   display: flex;
   justify-content: start;
+  max-width: 60vw;
+  max-height: 90vh; 
+  flex-wrap: wrap;
+  overflow-x: hidden;
+  overflow-y: scroll;
   /* padding: 30px; */
   font-family: 'Lobster', cursive;
   color:black;
 }
 
+.meal--list {
+  /* padding: 30px; */
+  width: 60vw;
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  /* overflow-y: auto; */
+}
+
 /* meals-container contains meal-cards */
 
 .meal-card {
-  width: 250px;
+  width: 225px;
   margin: 30px;
   font-size: 12px;
   flex: 0 0 auto;         
@@ -280,7 +292,15 @@ nav {
   width: 225px;
   height: auto;
   border-radius: 9px;
-  
+  box-shadow: 7px 7px 2px rgba(0, 0, 0, 0.35);  
+}
+
+.meal-card--image:hover {
+  width: 225px;
+  height: auto;
+  border-radius: 9px;  
+  box-shadow: 0px 0px;
+  opacity: 0.5;
 }
 
 .ingredient-info {
@@ -321,17 +341,6 @@ nav {
   margin-right: 15px;
 }
 
-.meal--list {
-  /* padding: 30px; */
-  width: 90vw;
-  background-color: darkgray;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 20px;
-  /* overflow-y: auto; */
-}
-
 .meal--title {
   display: flex;
   height: 100px;
@@ -340,7 +349,7 @@ nav {
   text-overflow: ellipsis;
   font-weight: bold;
   font-size: 20px;
-  text-align: left;
+  text-align: center;
 }
 
 .meal-card--info {
@@ -351,6 +360,13 @@ nav {
 .meal-card--like-thumb {
   width: 10px;
   margin: 5px;
+}
+
+.meal-card--spec {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
 }
 
 .input--header {
